# athelas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml  formatting.yml  regression_testing.yml  ruff.yml  unit_testing.yml
Example/Hydro/: Driver.cpp  Driver.h  Initialization.cpp  Initialization.h  Makefile  main
Inputs/: sod.ini
Test/: CMakeLists.txt
Test/unit/: test_utils.hpp
Tools/: AnalyticSolutions.jl  Basis.jl  ReadThornado.jl  Reader.jl  Structures.jl
Tools/Bash/: format.sh
cmake/: build_info.cmake
data/: atomic_data.csv
inputs/: advection.ini  advection.toml  einfeldt123.toml  ejecta_csm.toml  gas_collapse.toml  hydrostatic_balance.toml  leblanc.toml  marshak.toml  moving_contact.toml  ni_decay.toml  noh.toml  one_zone_ionization.toml  rad_advection.toml  rad_equilibrium.toml  rad_shock.toml  rad_shock_steady.toml  radeq.toml  sedov.toml  shockless_noh.toml  shu_osher.toml  smooth_flow.toml  sod.toml  sod_strong.toml
scripts/: .JuliaFormatter.toml
scripts/bash/: format.sh
scripts/hooks/: install-hooks.sh  pre-commit
scripts/julia/: AnalyticSolutions.jl  Basis.jl  ReadThornado.jl  Reader.jl
scripts/python/: athelas.py  einfeldt.py  he.py  leblanc.py  movie.py  out  plot.py  plot_rho.py  radshock.py
src/: .clang-tidy  :141  Driver.cpp  Driver.hpp  basic_types.hpp  build_info.cpp.in  build_info.hpp  build_info.hpp.in  driver.cpp  driver.hpp  kokkos_abstraction.hpp  kokkos_types.hpp  loop_bounds.hpp  loop_layout.hpp  loop_layout.hpp.in  main.cpp  main.hpp  out  run_clang_tidy.py
src/BC/: BoundaryConditionsLibrary.cpp  BoundaryConditionsLibrary.hpp
src/Basis/: PolynomialBasis.cpp  PolynomialBasis.hpp
src/EoS/: EoS.hpp  EoS_Base.hpp  EoS_Ideal.cpp
src/Fluid/: FluidUtilities.cpp  FluidUtilities.hpp  Fluid_Discretization.cpp  Fluid_Discretization.hpp
src/Geometry/: Geometry.hpp  Grid.cpp  Grid.hpp
src/IO/: IOLibrary.cpp  IOLibrary.hpp
src/Limiters/: BoundEnforcingLimiter.cpp  BoundEnforcingLimiter.hpp  CharacteristicDecomposition.cpp  CharacteristicDecomposition.hpp  SlopeLimiter.cpp  SlopeLimiter.hpp  SlopeLimiter_Utilities.cpp  SlopeLimiter_Utilities.hpp
src/LinAlg/: LinearAlgebraModules.cpp  LinearAlgebraModules.hpp
src/PGen/: Initialization.hpp  ProblemIn.cpp  ProblemIn.hpp  advection.hpp  equilibrium.hpp  lightbulb.cpp
src/Quadrature/: QuadratureLibrary.cpp  QuadratureLibrary.hpp
src/Radiation/: RadUtilities.cpp  RadUtilities.hpp  Rad_Discretization.cpp  Rad_Discretization.hpp
src/Timestepper/: Timestepper.cpp  Timestepper.hpp
src/Utils/: Abstractions.hpp  Constants.hpp  Error.hpp  Utilities.hpp
src/atom/: atom.hpp
src/basis/: polynomial_basis.cpp  polynomial_basis.hpp
src/bc/: boundary_conditions.cpp  boundary_conditions.hpp  boundary_conditions_base.hpp  boundary_conditions_library.cpp  boundary_conditions_library.hpp
src/composition/: compdata.cpp  compdata.hpp  composition.cpp  composition.hpp  saha.cpp  saha.hpp
src/concepts/: arithmetic.hpp  packages.hpp  types.hpp
src/eos/: eos.hpp  eos_base.hpp  eos_ideal.cpp  eos_marshak.cpp  eos_pacynski.cpp  eos_paczynski.cpp  eos_polytropic.cpp  eos_variant.hpp
src/fluid/: fluid_discretization.cpp  fluid_discretization.hpp  fluid_utilities.cpp  fluid_utilities.hpp  hydro_package.cpp  hydro_package.hpp
src/geometry/: geometry.hpp  grid.cpp  grid.hpp  grid_indexer.hpp
src/gravity/: gravity_package.cpp  gravity_package.hpp
src/heating/: nickel_package.cpp  nickel_package.hpp
src/history/: history.cpp  history.hpp  quantities.hpp
src/interface/: packages_base.hpp  params.cpp  params.hpp
src/io/: csv.hpp  io.cpp  io.hpp  io_library.cpp  io_library.hpp  parser.hpp
src/limiters/: bound_enforcing_limiter.cpp  bound_enforcing_limiter.hpp  characteristic_decomposition.hpp  slope_limiter.cpp  slope_limiter.hpp  slope_limiter_base.hpp  slope_limiter_tvdminmod.cpp  slope_limiter_unlimited.cpp  slope_limiter_utilities.cpp  slope_limiter_utilities.hpp  slope_limiter_weno.cpp
src/linalg/: linear_algebra.cpp  linear_algebra.hpp  linear_algebra_modules.cpp  linear_algebra_modules.hpp
src/opacity/: opac.hpp  opac_base.hpp  opac_constant.cpp  opac_powerlaw_rho.cpp  opac_variant.hpp
src/pgen/: advection.hpp  ejecta_csm.hpp  equilibrium.hpp  gas_collapse.hpp  hydrostatic_balance.hpp  initialization.hpp  marshak.hpp  moving_contact.hpp  ni_decay.hpp  noh.hpp  one_zone_ionization.hpp  problem_in.cpp  problem_in.hpp  rad_advection.hpp  rad_equilibrium.hpp  rad_shock.hpp  rad_shock_steady.hpp  rad_wave.hpp  sedov.hpp  shockless_noh.hpp  shu_osher.hpp  smooth_flow.hpp  sod.hpp
src/quadrature/: quadrature.cpp  quadrature.hpp  quadrature_library.cpp  quadrature_library.hpp
src/radiation/: rad_discretization.cpp  rad_discretization.hpp  rad_utilities.cpp  rad_utilities.hpp  radhydro_package.cpp  radhydro_package.hpp
src/solvers/: hydrostatic_equilibrium.cpp  hydrostatic_equilibrium.hpp  root_finder_opts.hpp  root_finders.hpp
src/state/: state.cpp  state.hpp
src/timestepper/: operator_split_stepper.cpp  operator_split_stepper.hpp  tableau.cpp  tableau.hpp  timestepper.cpp  timestepper.hpp
src/utils/: abstractions.hpp  constants.hpp  error.hpp  fill_derived.hpp  indexer.hpp  riemann.cpp  riemann.hpp  root_finder_opts.hpp  root_finders.hpp  type_list.hpp  utilities.hpp
test/regression/: pyrightconfig.json  regression_test.py  run_regression_tests.py  test_ejecta_csm.py  test_marshak.py  test_nickel.py  test_noh.py  test_one_zone_ionization.py  test_radeq.py  test_sedov.py  test_sod.py
test/unit/: CMakeLists.txt  test_catch_integration.cpp  test_paczynski.cpp  test_parser.cpp  test_quadrature.cpp  test_root_finders.cpp  test_utils.hpp  unit_tests_main.cpp
tools/: Reader.jl  out
tools/bash/: format.sh
tools/julia/: EOS.jl  Reader.jl
tools/python/: athelas.py  basis.py  marshak.py  movie.py  plot.py  radeq.py  radshock.py  sedov.py  shocktube.py  style.mplstyle
(+93 files in other folders)
